Major update
Removed redudant features following Java8 onwards.